--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: hsl(218, 57%, 92%);
+    background-color: #f8f9fa;
     color: #333;
     text-align: center;
 }
